--- a/src/app/dashboard/components/orders-management/get-orders/get-orders.component.html
+++ b/src/app/dashboard/components/orders-management/get-orders/get-orders.component.html
@@ -5,7 +5,7 @@
     <button
       type="button"
       pButton
-      icon="pi pi-file-pdf"
+      icon="pi pi-file-pdf mr-1"
       (click)="exportPdf()"
       class="p-button mx-2 my-2"
       pTooltip="PDF"
@@ -16,7 +16,7 @@
     <button
       type="button"
       pButton
-      icon="pi pi-file-excel"
+      icon="pi pi-file-excel mr-1"
       (click)="exportExcel()"
       class="p-button mx-2 my-2"
       pTooltip="XLS"
