--- a/src/app/dashboard/layout-creoter/menu.component.scss
+++ b/src/app/dashboard/layout-creoter/menu.component.scss
@@ -21,6 +21,7 @@ aside a {
   color: $dark-text;
   cursor: pointer;
   display: block;
+  font-weight: 700;
   padding: 12px;
   padding-left: 30px;
   text-decoration: none;
