--- a/src/app/dashboard/layout-creoter/topbar.component.scss
+++ b/src/app/dashboard/layout-creoter/topbar.component.scss
@@ -4,3 +4,13 @@ $dark-text: #34495e;
   color: $dark-text;
   cursor: pointer;
 }
+
+.custom-select{
+  appearance: none;
+  border: none;
+  padding: 5px;
+}
+
+.custom-select::after {
+  border: none;
+}
