--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -30,6 +30,10 @@ $module-color:#253741;
   border: none;
   background: transparent;
   margin-right: 20px;
+  appearance: none;
+  border: none;
+  font-weight: bold;
+  padding: 5px;
 }
 .footer {
   position: relative;
