--- a/src/app/pages/components/account/userinfo/userinfo.component.html
+++ b/src/app/pages/components/account/userinfo/userinfo.component.html
@@ -12,7 +12,10 @@
                     styleClass="mr-2"
                     shape="circle"
                     size="xlarge"
-                    [style]="{ 'background-color': '#1071b3', color: '#ffffff' }"
+                    [style]="{
+                      'background-color': '#1071b3',
+                      color: '#ffffff'
+                    }"
                   ></p-avatar>
                 </div>
                 <h6 class="f-w-600">
