--- a/src/app/admin/layout/footer.component.html
+++ b/src/app/admin/layout/footer.component.html
@@ -1,5 +1,5 @@
 <div class="layout-footer">
   <img src="assets/layout/images/{{layoutService.config.colorScheme === 'dark' ? 'logo-dark' : 'logo-white'}}.svg" alt="Logo" height="20" class="mr-2"/>
   by
-  <span class="font-medium ml-2">Orion Innovation</span>
+  <span class="font-medium ml-2">Orion Shop</span>
 </div>
