--- a/src/app/dashboard/components/profil-management/profil-management.component.scss
+++ b/src/app/dashboard/components/profil-management/profil-management.component.scss
@@ -42,15 +42,18 @@ $background-color: #ecf0f1;
             margin-left: 8px;
           }
         }
+
         .p-float-label {
           margin: 10px;
           position: relative;
           width: 100%;
-          input , select {
+          input,
+          select {
             width: calc(100% - 30px);
             padding: 10px;
             padding-left: 35px;
             font-size: 1rem;
+            appearance: none;
             border-radius: 5px;
             border: 1px solid $dark-text;
             background-color: transparent;
@@ -62,7 +65,6 @@ $background-color: #ecf0f1;
               border: 1px solid $dark-text;
             }
           }
-
 
           label {
             font-size: 0.9rem;
@@ -183,42 +185,40 @@ $background-color: #ecf0f1;
     }
   }
 
+  .dropdown {
+    width: 95%;
+    display: flex;
+    font-size: 1rem;
+    border: none;
+    padding-left: 25px;
+    border-bottom: 2px solid $dark-text;
+    background-color: transparent;
+    color: #34495e;
+    transition: border-color 0.3s;
 
-    .dropdown {
-      width: 95%;
-      display: flex;
-      font-size: 1rem;
-      border: none;
-      padding-left: 25px;
+    &:focus {
+      outline: none;
       border-bottom: 2px solid $dark-text;
-      background-color: transparent;
-      color: #34495e;
-      transition: border-color 0.3s;
-
-      &:focus {
-        outline: none;
-        border-bottom: 2px solid $dark-text;
-      }
-
-      .p-dropdown-trigger {
-        color: #000;
-      }
     }
 
-    .button{
+    .p-dropdown-trigger {
+      color: #000;
+    }
+  }
+
+  .button {
+    background-color: $dark-text;
+    width: calc(100% - 30px);
+    height: 45px;
+    justify-content: center;
+    margin-bottom: 30px;
+    border: none;
+
+    &:hover {
+      outline: none;
       background-color: $dark-text;
-      width: calc(100% - 30px);
-      height: 45px;
-      justify-content: center;
-      margin-bottom: 30px;
-      border: none;
-
-      &:hover {
-        outline: none;
-        background-color: $dark-text;
-      }
     }
-
+  }
 }
 
 @media (max-width: $breakpoint-tablet) {
