--- a/src/app/pages/components/navbar-list/navbar-list.component.scss
+++ b/src/app/pages/components/navbar-list/navbar-list.component.scss
@@ -97,8 +97,6 @@
     }
   }
 
-
-
   .navbar {
     align-items: center;
     .title {
@@ -114,6 +112,9 @@
       font-size: 1.1rem;
       font-weight: 700;
       letter-spacing: 1px;
+      appearance: none;
+      border: none;
+      padding: 5px;
     }
     .right-menu {
       display: flex;
@@ -129,15 +130,14 @@
       li {
         margin-right: 15px;
       }
-      a{
+      a {
         color: #3498db;
         font-weight: 700;
         letter-spacing: 1px;
         text-decoration: underline;
         margin-right: 15px;
 
-
-        &:hover{
+        &:hover {
           text-decoration: underline;
         }
       }
@@ -279,8 +279,6 @@
     }
   }
 
-
-
   .navbar {
     .title {
       letter-spacing: 0;
@@ -306,7 +304,7 @@
       li {
         margin-right: 15px;
       }
-      a{
+      a {
         color: #3498db;
         font-weight: 600;
         letter-spacing: 1px;
@@ -314,8 +312,7 @@
         margin-right: auto;
         font-size: 1.1rem;
 
-
-        &:hover{
+        &:hover {
           text-decoration: underline;
         }
       }
@@ -325,7 +322,6 @@
   .search {
     margin-bottom: 1rem;
     width: 50%;
-
 
     .pi-search {
       color: #555;
@@ -403,7 +399,6 @@
 
       .item-txt {
         font-size: 1rem;
-
       }
 
       i.pi {
@@ -458,8 +453,6 @@
     }
   }
 
-
-
   .navbar {
     align-items: center;
     .title {
@@ -490,7 +483,7 @@
       li {
         margin-right: 15px;
       }
-      a{
+      a {
         color: #3498db;
         font-weight: 700;
         letter-spacing: 1px;
@@ -498,8 +491,7 @@
         margin-right: auto;
         font-size: 1rem;
 
-
-        &:hover{
+        &:hover {
           text-decoration: underline;
         }
       }
@@ -674,7 +666,7 @@
       li {
         margin-right: 5px;
       }
-      a{
+      a {
         color: #3498db;
         font-weight: 700;
         letter-spacing: 1px;
@@ -682,8 +674,7 @@
         margin-right: auto;
         font-size: 0.9rem;
 
-
-        &:hover{
+        &:hover {
           text-decoration: underline;
         }
       }
