--- a/src/app/home/reset-password/reset-password-password/reset-password-password.component.scss
+++ b/src/app/home/reset-password/reset-password-password/reset-password-password.component.scss
@@ -34,7 +34,6 @@ $module-color:#253741;
 
       .p-float-label {
         position: relative;
-
         input {
           width: 100%;
           padding: 15px;
@@ -167,7 +166,7 @@ $module-color:#253741;
     font-size: 1rem;
     border: none;
     border-radius: none;
-    background-color: transparent;
+    background-color: $background-color;
     color: $dark-text;
     transition: border-color 0.3s;
 
@@ -179,7 +178,9 @@ $module-color:#253741;
     input{
       width: 100%;
       padding-left: 30px;
+      border: none;
       border-bottom: 2px solid $module-color;
+      background-color: $background-color;
 
     }
 
