--- a/src/app/pages/components/account/userpassword/userpassword.component.html
+++ b/src/app/pages/components/account/userpassword/userpassword.component.html
@@ -1,6 +1,6 @@
 <div class="box">
  <div class="form">
-  <form class="container" [formGroup]="newpassForm">
+  <form class="container" [formGroup]="newpassForm" autocomplete="on">
     <div class="row">
       <div class="header">
         <h2>
@@ -14,6 +14,8 @@
             id="currentPassword"
             formControlName="currentPassword"
             styleClass="password"
+            aria-label="password"
+            autocomplete="currentPassword"
             [toggleMask]="true"
             [feedback]="false"
           />
@@ -55,6 +57,8 @@
             id="password"
             formControlName="password"
             styleClass="password"
+            aria-label="aria-label"
+            autocomplete="new-password"
             [toggleMask]="true"
           >
             <ng-template pTemplate="header">
@@ -114,6 +118,7 @@
             id="confirmpassword"
             formControlName="confirmpassword"
             styleClass="password"
+            autocomplete="new-password"
             [toggleMask]="true"
           >
             <ng-template pTemplate="header">
