--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -11,6 +11,7 @@
         pInputText
         type="email"
         id="email"
+        name="email"
         formControlName="email"
         autocomplete="on"
         />
@@ -40,6 +41,7 @@
       <p-password
         id="password"
         formControlName="password"
+        name="password"
         styleClass="password"
         [toggleMask]="true"
         [feedback]="false"
